--- a/MySpace/MySpace/AppDelegate/Info.plist
+++ b/MySpace/MySpace/AppDelegate/Info.plist
@@ -28,11 +28,24 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>需要您的同意才能访问相机</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>需要你的同意才能获取您的位置</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>需要您的同意才能访问麦克风</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要您的同意才能访问相册</string>
 </dict>
 </plist>
